@startuml AITokenAnalyzer

interface ITokenizer {
    +Tokenize(text: string): vector<string>
}

class Tokenizer {
    +Tokenize(text: string): vector<string>
}

interface ICostCalculator {
    +Calculate(total_tokens: int, mp: ModelParams): float
}

class CostCalculator {
    +Calculate(total_tokens: int, mp: ModelParams): float
}

interface IModelParams {
    +NAME: string
    +MAX_CONTENT_LENGTH: int
    +TOKENS_PER_SECOND: int
}

class ModelParams {
    +NAME: string
    +MAX_CONTENT_LENGTH: int
    +TOKENS_PER_SECOND: int
    +plan_output_tokens(optional<string>)
}

class FileReader {
    +ReadFile(path:string)
}

class ConfigIO {
    +load_models(path: string): vector<ModelsParams>
    +update_models(mode: ModelParams): void
    +load_csv(path: string): vector<ModelsParams>
    +edit_config(path: string): void
}

class EnergyDecorator {
    +w_to_kwh(watts: float): float
    +kwh_to_w(kwh: float): float
    +Normalize(conversion_func: void *, price: float): float
}

class Main {
    - calc: CostCalculator
    - tb: Tokenizer
    - conf: ConfigIO
}

' Relationship's
' Tokenizer Relationships
ITokenizer "1" ..|> "many" Tokenizer
' Cost Algo. Relationships
ICostCalculator "1" ..|> "many" CostCalculator
CostCalculator ..> EnergyDecorator
' Model/Config Relationships
IModelParams "1" ..|> "many" ModelParams
ConfigIO "1" --> "many" ModelParams
' Main relationships
CostCalculator "many" --> "1" Main
Tokenizer "many" --> "1" Main
ConfigIO "1" --> "1" Main
FileReader "1" --> "1" Main
@enduml